k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: milonexa
  labels:
    name: milonexa
    environment: production
